--- a/app/src/main/res/layout/char_list.xml
+++ b/app/src/main/res/layout/char_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="10dp"
     android:background="@color/teal_200">
 
     <androidx.cardview.widget.CardView
@@ -24,45 +25,52 @@
             android:layout_height="141dp"
             android:layout_margin="10dp">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_margin="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:srcCompat="@tools:sample/avatars" />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="30dp">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="MissingConstraints"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </androidx.cardview.widget.CardView>
+
 
             <TextView
                 android:id="@+id/tv_title"
-                android:textColor="@color/white"
-                android:shadowColor="@color/white"
                 android:layout_width="200dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
                 android:gravity="center"
                 android:hint="NAME"
+                android:shadowColor="@color/white"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@id/tv_species"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/cardView1"
                 app:layout_constraintTop_toTopOf="@id/imageView"
-                app:layout_constraintVertical_bias="0.173"
+                app:layout_constraintVertical_bias="1.0"
                 tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/tv_species"
-                android:textColor="@color/white"
                 android:layout_width="75dp"
                 android:layout_height="25dp"
-                android:layout_marginStart="10dp"
                 android:gravity="center"
                 android:hint="Species"
+                android:textColor="@color/white"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toTopOf="@id/tv_location"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.182"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintHorizontal_bias="0.115"
+                app:layout_constraintStart_toEndOf="@+id/cardView1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.506"
                 tools:ignore="MissingConstraints" />
@@ -96,24 +104,24 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.315"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/cardView1"
                 app:layout_constraintTop_toBottomOf="@id/tv_species"
                 app:layout_constraintVertical_bias="0.84"
                 tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/tv_locationHard"
-                android:textColor="@color/white"
                 android:layout_width="158dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
                 android:gravity="center"
                 android:text="Last known location"
+                android:textColor="@color/white"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toTopOf="@id/tv_location"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.315"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/cardView1"
                 app:layout_constraintTop_toBottomOf="@id/tv_species"
                 app:layout_constraintVertical_bias="0.0"
                 tools:ignore="MissingConstraints" />
@@ -130,7 +138,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.315"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/cardView1"
                 app:layout_constraintTop_toBottomOf="@id/tv_location"
                 app:layout_constraintVertical_bias="0.058"
                 tools:ignore="MissingConstraints" />
