--- a/app/src/main/res/layout/episode_list.xml
+++ b/app/src/main/res/layout/episode_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="20dp"
     android:background="@color/teal_200">
 
     <androidx.cardview.widget.CardView
@@ -26,7 +27,7 @@
             android:layout_margin="10dp">
 
             <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/tv_titleEp"
                 android:layout_width="200dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
@@ -39,7 +40,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.505"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/imageView"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.173"
                 tools:ignore="MissingConstraints" />
 
@@ -71,18 +72,17 @@
                 android:text="No."
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toTopOf="@id/tv_location"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.312"
                 app:layout_constraintStart_toEndOf="@id/tv_species"
-                app:layout_constraintTop_toBottomOf="@id/tv_title"
+                app:layout_constraintTop_toBottomOf="@id/tv_episode_number"
                 app:layout_constraintVertical_bias="0.0"
                 tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/tv_airdate"
                 android:layout_width="75dp"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="172dp"
                 android:gravity="center"
@@ -111,7 +111,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.312"
                 app:layout_constraintStart_toEndOf="@id/tv_species"
-                app:layout_constraintTop_toBottomOf="@id/tv_title"
+                app:layout_constraintTop_toBottomOf="@id/tv_titleEp"
                 app:layout_constraintVertical_bias="0.0"
                 tools:ignore="MissingConstraints" />
 
