--- a/app/src/main/res/layout/fragment_character_details.xml
+++ b/app/src/main/res/layout/fragment_character_details.xml
@@ -33,7 +33,8 @@
         android:layout_marginVertical="20dp"
         android:text="@string/status"
         android:textColor="@color/light_blue"
-        android:textSize="15sp" />
+        android:textStyle="bold"
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -48,7 +49,8 @@
             android:layout_marginEnd="30dp"
             android:text="@string/species"
             android:textColor="@color/light_blue"
-            android:textSize="15sp" />
+            android:textStyle="bold"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_char_gender"
@@ -56,7 +58,8 @@
             android:layout_height="wrap_content"
             android:text="@string/gender"
             android:textColor="@color/light_blue"
-            android:textSize="15sp" />
+            android:textStyle="bold"
+            android:textSize="18sp"/>
     </LinearLayout>
 
     <LinearLayout
