--- a/app/src/main/res/layout/fragment_episodes_list.xml
+++ b/app/src/main/res/layout/fragment_episodes_list.xml
@@ -11,16 +11,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
+        android:gravity="center_horizontal"
+        android:padding="20dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_char_img"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_margin="10dp"
+            android:layout_marginHorizontal="20dp"
             android:background="@drawable/ic_launcher_foreground" />
 
         <TextView
@@ -30,7 +29,7 @@
             android:text="@string/episodes"
             android:textStyle="bold"
             android:textColor="@color/blue"
-            android:textSize="20sp"/>
+            android:textSize="25sp"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
