--- a/app/src/main/res/layout/character_episodes.xml
+++ b/app/src/main/res/layout/character_episodes.xml
@@ -1,8 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="#bdc8c9"
+    android:layout_marginRight="20sp"
+    android:layout_marginLeft="20sp"
+    android:layout_marginBottom="20sp">
 
+    <TextView
+        android:id="@+id/tv_episode_name"
+        app:layout_constraintHorizontal_weight="4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15sp"
+        android:layout_marginTop="5sp"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:text="lala"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tv_episode_number"
+        />
 
+    <TextView
+        android:id="@+id/tv_episode_number"
+        app:layout_constraintHorizontal_weight="1"
+        android:layout_width="0dp"
+        android:paddingLeft="25sp"
+        android:layout_marginTop="5sp"
+        android:layout_height="wrap_content"
+        android:text="lala"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/tv_episode_name"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_aired_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15sp"
+        android:paddingBottom="5sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_episode_name"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
