--- a/app/src/main/res/layout/episode_character_appearance.xml
+++ b/app/src/main/res/layout/episode_character_appearance.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+        android:id="@+id/ll_episode_character_appearance"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="20sp"
         android:layout_marginLeft="40dp"
+        android:background="#bdc8c9"
         android:layout_marginRight="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +42,7 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_status_gender"
+                    android:layout_marginLeft="10sp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 
